changed fonts to the prefered HAM font

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Museum Explorer | Harvard Art Museums</title>
+		<link rel="stylesheet" href="http://fonts.typotheque.com/WF-023797-007265.css" type="text/css" />
 		<style type="text/css">
-			body {background: #ffffff;color: #000000;font-family: verdana;font-size: 0.8em;margin: 0px;padding: 0px;}
+			body {background: #ffffff;color: #000000;font-family: "Neutral Regular 3", "NeutralBP", "Neutral BP", Helvetica, Arial, sans-serif;font-size: 0.8em;margin: 0px;padding: 0px;}
 			header {background: #e7e7e7; padding: 1px 10px 1px 10px;color: #58595b;}
 
 			/*#content {overflow: hidden;}*/
