--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 				</section>
 				<section style="padding-top:10px;padding-bottom:10px;">
 					<h2>How do I use this site?</h2>
-					<p>Use the options on the Interests menu to switch between layouts and filter the objects. Click on a circle in any layout to learn more about it.</p>
+					<p>Use the options on the Interests menu to switch between layouts and filter the objects. Click on a circle in any layout to learn more about it. Additional details display in the scrolling information panel on the right side of the window.</p>
+					<p>Click the <img src="img/info.png"> icon on the lower right corner of the window to show or hide the information panel.</p>
 					<p>If you get lost, click Reset the Layout on the Interests menu.</p>
 				</section>
 			</div>			
